[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/DL/2D/NetworkModuleDetailsManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Stuff/DebouncingTimer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Stuff/TextLine.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/ThemesAndFonts/ScrollBarTheme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Stuff/DebouncingTimer.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_bottom = 40.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[node name="NetworkModuleDetailsScreen2D" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -56.0
margin_bottom = -66.0
alignment = 1

[node name="NetworkModuleDetailsManager" type="HBoxContainer" parent="." groups=["on_loading_fv_data", "on_receive_classification_results", "on_receive_image_data", "on_set_fv_image_resource"]]
margin_right = 968.0
margin_bottom = 534.0
alignment = 1
script = ExtResource( 1 )

[node name="ModuleNotesPanel" type="PanelContainer" parent="NetworkModuleDetailsManager"]
margin_right = 400.0
margin_bottom = 534.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkModuleDetailsManager/ModuleNotesPanel"]
margin_right = 400.0
margin_bottom = 534.0
alignment = 2

[node name="ModuleNotes" type="VBoxContainer" parent="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer"]
margin_top = 446.0
margin_right = 400.0
margin_bottom = 446.0
alignment = 2

[node name="TextLine" parent="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 450.0
margin_bottom = 490.0
text = "Scale images here:"

[node name="ImageScaleBar" type="HSlider" parent="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer"]
margin_top = 494.0
margin_right = 400.0
margin_bottom = 534.0
rect_min_size = Vector2( 400, 40 )
size_flags_vertical = 1
custom_styles/slider = SubResource( 8 )
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="DebouncingTimer" type="Timer" parent="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer/ImageScaleBar"]
wait_time = 0.5
one_shot = true
script = ExtResource( 2 )

[node name="ImagePanel" type="PanelContainer" parent="NetworkModuleDetailsManager"]
margin_left = 404.0
margin_right = 968.0
margin_bottom = 534.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel"]
margin_right = 564.0
margin_bottom = 534.0
custom_constants/separation = 20
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer"]
margin_right = 564.0
margin_bottom = 474.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/ScrollContainer"]
custom_constants/separation = 10

[node name="Padding" type="ReferenceRect" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/ScrollContainer/HBoxContainer"]
visible = false
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )

[node name="ChannelContainer" type="GridContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 8

[node name="Legend" type="HBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer"]
margin_top = 494.0
margin_right = 564.0
margin_bottom = 534.0
custom_constants/separation = 30
alignment = 1

[node name="LegendItemZero" type="HBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend"]
margin_right = 168.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItemZero"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0, 0, 0, 1 )

[node name="Equals" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItemZero" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_zero_decoded" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItemZero" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[node name="LegendItem127" type="HBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend"]
margin_left = 198.0
margin_right = 366.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem127"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="Equals" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem127" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_127_decoded" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem127" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[node name="LegendItem255" type="HBoxContainer" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend"]
margin_left = 396.0
margin_right = 564.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem255"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Equals" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem255" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_255_decoded" parent="NetworkModuleDetailsManager/ImagePanel/VBoxContainer/Legend/LegendItem255" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[node name="LoadingScreen" type="PanelContainer" parent="NetworkModuleDetailsManager"]
visible = false
margin_left = 972.0
margin_right = 986.0
margin_bottom = 534.0
custom_styles/panel = SubResource( 9 )

[node name="TextLine" parent="NetworkModuleDetailsManager/LoadingScreen" instance=ExtResource( 3 )]
text = "Loading"
align = 1

[node name="EdgeDrawTimer" parent="NetworkModuleDetailsManager" instance=ExtResource( 6 )]
wait_time = 0.5

[node name="Edges" type="Node2D" parent="NetworkModuleDetailsManager"]

[connection signal="value_changed" from="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer/ImageScaleBar" to="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer/ImageScaleBar/DebouncingTimer" method="_on_trigger"]
[connection signal="timeout" from="NetworkModuleDetailsManager/ModuleNotesPanel/VBoxContainer/ImageScaleBar/DebouncingTimer" to="NetworkModuleDetailsManager" method="_on_image_scale_changed"]
[connection signal="timeout" from="NetworkModuleDetailsManager/EdgeDrawTimer" to="NetworkModuleDetailsManager" method="draw_edges"]
